# aegiseval

./: .gitignore  LICENSE  MANIFEST.in  README.md  aegiseval-config.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/: labels.yml
.github/workflows/: ci.yml  label_blocker.yml  license.yml  release.yml  updater.yml
.reuse/: dep5
aegiseval/: __init__.py  integration.py
aegiseval/cli/: __init__.py  banner.py  main.py
aegiseval/config/: __init__.py  categories.py  flags.py  loader.py  provider_loader.py  schema.py  settings.py
aegiseval/config/provider_profiles/: gemini_safe.yaml  local_default.yaml  openai_safe.yaml
aegiseval/core/: __init__.py  regulations.py  score.py
aegiseval/data/: eu_ai_act.yaml  test_suite.py
aegiseval/grader/: __init__.py  classifiers.py  classifiers_numeric.py  classifiers_pii.py  classifiers_selfid.py  pipeline.py  rules.py  transformer_confirm.py
aegiseval/redteam/: __init__.py  attacker.py
aegiseval/report/: __init__.py  builder.py  i18n.py
aegiseval/report/templates/: __init__.py  badge.svg.jinja  report.html.jinja
aegiseval/runner/: __init__.py  adapters.py  evaluator.py  exceptions.py
aegiseval/runner/adapters/: __init__.py  anthropic.py  base_http.py  gemini.py  huggingface.py  openai.py
aegiseval/updater/: __init__.py  job.py
datasets/: toxigen_sample.csv
docs/: compliance_review.md  configuration.md  contributing.md  eu-ai-act.md  index.md  installation.md  privacy.md  release_checklist.md  usage.md  user_guide.md
docs/api/: cli.md  core.md  report.md  runner.md
examples/adapter_ollama_stub/: __init__.py
locales/en/: strings.yaml
locales/fr/: strings.yaml
schemas/: eu_ai_act.schema.json  test_suites.schema.json
scripts/: generate_sbom.sh  publish.sh
tests/: test_classifiers_ext.py  test_cli.py  test_config.py  test_coverage.py  test_csam_failfast.py  test_i18n.py  test_integration.py  test_loader_tags.py  test_numeric_pii_selfid.py  test_optin_banner.py  test_pdf.py  test_pipeline_profile.py  test_profile_skip_newtags.py  test_provider_loader.py  test_redteam.py  test_report.py  test_runner.py  test_scoring_functions.py  test_suites_ext.py  test_toxicity_classifier.py  test_updater.py
tests/cli/: test_main.py
tests/core/: test_regulations.py  test_score.py
tests/data/: classifier_test_data.csv  test_tags_enum.py  test_test_suite.py
tests/data/test_suites/: default.yaml
tests/grader/: test_classifiers.py
tests/redteam/: test_attacker.py
tests/report/: test_builder.py
tests/runner/: test_adapters.py  test_anthropic_adapter.py  test_evaluator.py  test_gemini_adapter.py  test_hf_adapter.py  test_openai_adapter.py
