[metadata]
name = aegiseval
version = attr: aegiseval.__version__
description = AegisEval Lite: A zero-infra CLI for LLM safety testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aegiseval/aegiseval
author = AegisEval Team
author_email = hello@aegiseval.ai
license = Apache License, Version 2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
install_requires =
    importlib-metadata>=6.0.0
    pydantic>=2.0.0
    typer>=0.9.0
    rich>=13.0.0

[options.entry_points]
aegiseval.adapters =
    ollama = adapter_ollama_stub:OllamaAdapter

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    ruff>=0.0.275
    mypy>=1.0.0

[ruff]
target-version = py312
line-length = 88
select = E, F, B, I

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True 